test/spec_vectors/simd_load/fail/module_18.wat
(module (memory 1) (func (local v128) (block (br_if 0 (v128.load (i32.const 0))))))